# chee6397

./: .buildinfo  .gitignore  LICENSE  README.html  README.md  _config.yml  _toc.yml  genindex.html  index.html  index.md  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy.yml
_sources/lab/: lab1-device_setup.md  lab1-example.ipynb  lab2-Python_intro.ipynb  lab3-linear_models.ipynb  lab5-intro_pytorch.ipynb
docs/: _config.yml  index.md
docs/lab/: lab1-device_setup.md  lab1-example.ipynb
lab/: lab1-device_setup.html  lab1-device_setup.md  lab1-example.html  lab1-example.ipynb  lab2-Python_intro.html  lab2-Python_intro.ipynb  lab3-linear_models.html  lab3-linear_models.ipynb  lab4-descriptors.html  lab4-descriptors.ipynb  lab5-intro_pytorch.html  lab5-intro_pytorch.ipynb
lab/data/: NaCl.POSCAR  iris.csv  real_estate_valuation_dataset.csv
