[build-system]
requires = ["setuptools >= 42", "versioningit >= 2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["docs"]

[project]
name = "chee6397"
requires-python = ">=3.9"
authors = [{name = "Mingjian Wen", email = "mjwengroup@gmail.com"}]
dynamic = ["version"]
dependencies = [
    "jupyter-book",
    "ipython",
    "autodoc_pydantic",
    "sphinx-autodoc-typehints",
    "numpy",
    "matplotlib",
]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"
