[build-system]
requires = ["setuptools >= 42", "versioningit >= 2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lab"] # a package is not needed; `lab` is just chosen to make it installable

[project]
name = "chee6397"
requires-python = ">=3.9"
authors = [{name = "Mingjian Wen", email = "mjwen@gmail.com"}]
dynamic = ["version"]
dependencies = [
    "jupyter-book",
    "ipython",
    "autodoc_pydantic",
    "sphinx-autodoc-typehints",
    "numpy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "openpyxl",
    "rdkit",
    "matminer",
    "crystal-toolkit",
]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"
